--- a/dokka/lecs/lecs/-tokenizer-kt/tokenize.html
+++ b/dokka/lecs/lecs/-tokenizer-kt/tokenize.html
@@ -25,7 +25,7 @@
         <div id="leftToggler"><span class="icon-toggler"></span></div>
         <script type="text/javascript" src="../../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../../scripts/main.js"></script>
-        <div class="main-content" id="content" pageIds="lecs//tokenize/#kotlin.String/PointingToDeclaration//-1454771441">
+        <div class="main-content" id="content" pageIds="lecs//tokenize/#kotlin.String/PointingToDeclaration//-452333241">
           <div class="navigation-wrapper" id="navigation-wrapper">
             <div class="breadcrumbs"><a href="../../index.html">lecs</a>/<a href="../index.html">lecs</a>/<a href="index.html">TokenizerKt</a>/<a href="tokenize.html">tokenize</a></div>
             <div class="pull-right d-flex">
@@ -40,7 +40,7 @@
   <div>
     <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div class="symbol monospace block">final <a href="https://docs.oracle.com/javase/8/docs/api/java/util/List.html">List</a>&lt;<a href="../-token/index.html">Token</a>&gt; <a href="tokenize.html">tokenize</a>(<a href="https://docs.oracle.com/javase/8/docs/api/java/lang/String.html">String</a> <a href="tokenize.html">input</a>)<span class="top-right-position"><span class="copy-icon"></span><div class="copy-popup-wrapper popup-to-left"><span class="copy-popup-icon"></span><span>Content copied to clipboard</span></div></span></div></div></div>
   </div>
-<p class="paragraph">Converts a string into a list of tokens. The tokens are as follows:</p><ul><li><p class="paragraph">Single quote delimited strings with escapable single quotes terminating on end of line and end of string,</p></li><li><p class="paragraph">Double quote delimited strings with escapable double quotes terminating on end of line and end of string,</p></li><li><p class="paragraph">Semicolon signaled line comments,</p></li><li><p class="paragraph">Brackets: (, ), {, }, , ,</p></li><li><p class="paragraph">Whitespace separated unicode-16 strings.</p></li></ul><p class="paragraph">Whitespace is considered insignificant and is only used to mark separation of tokens.</p><h4 class="">Return</h4><p class="paragraph">The list of tokens produced from <span data-unresolved-link="lecs//input/#/PointingToCallableParameters(-1)/">input</span></p><h2 class="">Parameters</h2><div data-togglable="Parameters"><div class="platform-hinted WithExtraAttributes" data-platform-hinted="data-platform-hinted" data-togglable="Parameters"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div data-togglable="Parameters"><div class="table" data-togglable="Parameters"><div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main"><div class="main-subrow keyValue WithExtraAttributes"><div class=""><span class="inline-flex">input</span></div><div><div class="title"><div data-togglable="Parameters"></div></div></div></div></div></div></div></div></div></div></div>
+</div>
         </div>
         <div class="footer"><span class="go-to-top-icon"><a href="#content"></a></span><span>© 2020 Copyright</span><span class="pull-right"><span>Sponsored and developed by dokka</span><a href="https://github.com/Kotlin/dokka"><span class="padded-icon"></span></a></span></div>
       </div>
