--- a/lecsdocs/issue-1-Malformed_quote_delimited_string_tokens_can_lead_to_potentially_unintuitive_parse_errors/lecs/lecs/-malformed-string-error/get-malformed-string.html
+++ b/lecsdocs/issue-1-Malformed_quote_delimited_string_tokens_can_lead_to_potentially_unintuitive_parse_errors/lecs/lecs/-malformed-string-error/get-malformed-string.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>copy</title>
+    <title>getMalformedString</title>
     <link href="../../../images/logo-icon.svg" rel="icon" type="image/svg">
     <script>var pathToRoot = "../../../";</script>
     <script type="text/javascript" src="../../../scripts/sourceset_dependencies.js" async="async"></script>
@@ -25,20 +25,20 @@
         <div id="leftToggler"><span class="icon-toggler"></span></div>
         <script type="text/javascript" src="../../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../../scripts/main.js"></script>
-        <div class="main-content" id="content" pageIds="lecs/UnmatchedOpeningBraces/copy/#kotlin.collections.List[lecs.Token]/PointingToDeclaration//-865330027">
+        <div class="main-content" id="content" pageIds="lecs/MalformedStringError/&lt;get-malformedString&gt;/#/PointingToDeclaration//-865330027">
           <div class="navigation-wrapper" id="navigation-wrapper">
-            <div class="breadcrumbs"><a href="../../index.html">lecs</a>/<a href="../index.html">lecs</a>/<a href="index.html">UnmatchedOpeningBraces</a>/<a href="copy.html">copy</a></div>
+            <div class="breadcrumbs"><a href="../../index.html">lecs</a>/<a href="../index.html">lecs</a>/<a href="index.html">MalformedStringError</a>/<a href="get-malformed-string.html">getMalformedString</a></div>
             <div class="pull-right d-flex">
               <div id="searchBar"></div>
             </div>
           </div>
           <div class="cover ">
-            <h1 class="cover"><span>copy</span></h1>
+            <h1 class="cover"><span>get</span><wbr></wbr><span>Malformed</span><wbr></wbr><span>String</span></h1>
           </div>
 <div class="divergent-group" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main"><div class="with-platform-tags"><span class="pull-right"></span></div>
 
   <div>
-    <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div class="symbol monospace block">final <a href="index.html">UnmatchedOpeningBraces</a> <a href="copy.html">copy</a>(<a href="https://docs.oracle.com/javase/8/docs/api/java/util/List.html">List</a>&lt;<a href="../-token/index.html">Token</a>&gt; <a href="copy.html">openingBraces</a>)<span class="top-right-position"><span class="copy-icon"></span><div class="copy-popup-wrapper popup-to-left"><span class="copy-popup-icon"></span><span>Content copied to clipboard</span></div></span></div></div></div>
+    <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div class="symbol monospace block">final <a href="../-token/index.html">Token</a> <a href="get-malformed-string.html">getMalformedString</a>()<span class="top-right-position"><span class="copy-icon"></span><div class="copy-popup-wrapper popup-to-left"><span class="copy-popup-icon"></span><span>Content copied to clipboard</span></div></span></div></div></div>
   </div>
 </div>
         </div>
