--- a/lecsdocs/main/lecs/lecs/-tokenizer-error/index.html
+++ b/lecsdocs/main/lecs/lecs/-tokenizer-error/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>ParseError</title>
+    <title>TokenizerError</title>
     <link href="../../../images/logo-icon.svg" rel="icon" type="image/svg">
     <script>var pathToRoot = "../../../";</script>
     <script type="text/javascript" src="../../../scripts/sourceset_dependencies.js" async="async"></script>
@@ -25,16 +25,16 @@
         <div id="leftToggler"><span class="icon-toggler"></span></div>
         <script type="text/javascript" src="../../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../../scripts/main.js"></script>
-        <div class="main-content" id="content" pageIds="lecs/ParseError///PointingToDeclaration//2035757345">
+        <div class="main-content" id="content" pageIds="lecs/TokenizerError///PointingToDeclaration//2035757345">
           <div class="navigation-wrapper" id="navigation-wrapper">
-            <div class="breadcrumbs"><a href="../../index.html">lecs</a>/<a href="../index.html">lecs</a>/<a href="index.html">ParseError</a></div>
+            <div class="breadcrumbs"><a href="../../index.html">lecs</a>/<a href="../index.html">lecs</a>/<a href="index.html">TokenizerError</a></div>
             <div class="pull-right d-flex">
               <div id="searchBar"></div>
             </div>
           </div>
           <div class="cover ">
-            <h1 class="cover"><span>Parse</span><wbr></wbr><span>Error</span></h1>
-            <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div class="symbol monospace">public class <a href="index.html">ParseError</a><span class="top-right-position"><span class="copy-icon"></span><div class="copy-popup-wrapper popup-to-left"><span class="copy-popup-icon"></span><span>Content copied to clipboard</span></div></span></div></div></div>
+            <h1 class="cover"><span>Tokenizer</span><wbr></wbr><span>Error</span></h1>
+            <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div class="symbol monospace">public class <a href="index.html">TokenizerError</a><span class="top-right-position"><span class="copy-icon"></span><div class="copy-popup-wrapper popup-to-left"><span class="copy-popup-icon"></span><span>Content copied to clipboard</span></div></span></div></div></div>
           </div>
           <div class="tabbedcontent">
             <div class="tabs-section" tabs-section="tabs-section"><button class="section-tab" data-active="" data-togglable="Functions">Functions</button><button class="section-tab" data-togglable="Inheritors">Inheritors</button></div>
@@ -93,28 +93,10 @@
                 </div>
               </div>
               <h2 class="">Inheritors</h2>
-              <div class="table" data-togglable="Inheritors"><a data-name="%5Blecs%2FMismatchedClosingBrace%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" anchor-label="MismatchedClosingBrace" id="%5Blecs%2FMismatchedClosingBrace%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" data-filterable-set=":dokkaHtml/main"></a>
+              <div class="table" data-togglable="Inheritors"><a data-name="%5Blecs%2FMalformedStringError%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" anchor-label="MalformedStringError" id="%5Blecs%2FMalformedStringError%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" data-filterable-set=":dokkaHtml/main"></a>
                 <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
                   <div class="main-subrow keyValue ">
-                    <div class=""><span class="inline-flex"><a href="../-mismatched-closing-brace/index.html">MismatchedClosingBrace</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="%5Blecs%2FMismatchedClosingBrace%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345"></span>
-                          <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-                        </span></span></div>
-                    <div></div>
-                  </div>
-                </div>
-<a data-name="%5Blecs%2FUnmatchedClosingBrace%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" anchor-label="UnmatchedClosingBrace" id="%5Blecs%2FUnmatchedClosingBrace%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" data-filterable-set=":dokkaHtml/main"></a>
-                <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
-                  <div class="main-subrow keyValue ">
-                    <div class=""><span class="inline-flex"><a href="../-unmatched-closing-brace/index.html">UnmatchedClosingBrace</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="%5Blecs%2FUnmatchedClosingBrace%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345"></span>
-                          <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-                        </span></span></div>
-                    <div></div>
-                  </div>
-                </div>
-<a data-name="%5Blecs%2FUnmatchedOpeningBraces%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" anchor-label="UnmatchedOpeningBraces" id="%5Blecs%2FUnmatchedOpeningBraces%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345" data-filterable-set=":dokkaHtml/main"></a>
-                <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
-                  <div class="main-subrow keyValue ">
-                    <div class=""><span class="inline-flex"><a href="../-unmatched-opening-braces/index.html">UnmatchedOpeningBraces</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="%5Blecs%2FUnmatchedOpeningBraces%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345"></span>
+                    <div class=""><span class="inline-flex"><a href="../-malformed-string-error/index.html">MalformedStringError</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="%5Blecs%2FMalformedStringError%2F%2F%2FPointingToDeclaration%2F%5D%2FInheritors%2F2035757345"></span>
                           <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
                         </span></span></div>
                     <div></div>
