--- a/lecsdocs/issue-1-Malformed_quote_delimited_string_tokens_can_lead_to_potentially_unintuitive_parse_errors/lecs/lecs/-parser-kt/index.html
+++ b/lecsdocs/issue-1-Malformed_quote_delimited_string_tokens_can_lead_to_potentially_unintuitive_parse_errors/lecs/lecs/-parser-kt/index.html
@@ -25,7 +25,7 @@
         <div id="leftToggler"><span class="icon-toggler"></span></div>
         <script type="text/javascript" src="../../../scripts/pages.js"></script>
         <script type="text/javascript" src="../../../scripts/main.js"></script>
-        <div class="main-content" id="content" pageIds="lecs/ParserKt///PointingToDeclaration//-2043937075">
+        <div class="main-content" id="content" pageIds="lecs/ParserKt///PointingToDeclaration//-1692443571">
           <div class="navigation-wrapper" id="navigation-wrapper">
             <div class="breadcrumbs"><a href="../../index.html">lecs</a>/<a href="../index.html">lecs</a>/<a href="index.html">ParserKt</a></div>
             <div class="pull-right d-flex">
@@ -40,10 +40,10 @@
             <div class="tabs-section" tabs-section="tabs-section"><button class="section-tab" data-active="" data-togglable="Functions">Functions</button></div>
             <div class="tabs-section-body">
               <h2 class="">Functions</h2>
-              <div class="table" data-togglable="Functions"><a data-name="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-2043937075" anchor-label="parse" id="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-2043937075" data-filterable-set=":dokkaHtml/main"></a>
+              <div class="table" data-togglable="Functions"><a data-name="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571" anchor-label="parse" id="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571" data-filterable-set=":dokkaHtml/main"></a>
                 <div class="table-row" data-filterable-current=":dokkaHtml/main" data-filterable-set=":dokkaHtml/main">
                   <div class="main-subrow keyValue ">
-                    <div class=""><span class="inline-flex"><a href="parse.html">parse</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-2043937075"></span>
+                    <div class=""><span class="inline-flex"><a href="parse.html">parse</a><span class="anchor-wrapper"><span class="anchor-icon" pointing-to="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571"></span>
                           <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
                         </span></span></div>
                     <div>
@@ -52,7 +52,7 @@
   <div>
     <div class="platform-hinted " data-platform-hinted="data-platform-hinted"><div class="content sourceset-depenent-content" data-active="" data-togglable=":dokkaHtml/main"><div class="symbol monospace block">final <span data-unresolved-link="arrow.core/Either///PointingToDeclaration/">Either</span>&lt;<a href="../-parse-error/index.html">ParseError</a>, <a href="https://docs.oracle.com/javase/8/docs/api/java/util/List.html">List</a>&lt;<a href="../-lecs-node/index.html">LecsNode</a>&gt;&gt; <a href="parse.html">parse</a>(<a href="https://docs.oracle.com/javase/8/docs/api/java/util/List.html">List</a>&lt;<a href="../-token/index.html">Token</a>&gt; <a href="parse.html">tokens</a>)<span class="top-right-position"><span class="copy-icon"></span><div class="copy-popup-wrapper popup-to-left"><span class="copy-popup-icon"></span><span>Content copied to clipboard</span></div></span></div></div></div>
   </div>
-</div>
+<a data-name="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571" anchor-label="parse" id="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571" data-filterable-set=":dokkaHtml/main"></a><div class="brief "><a data-name="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571" anchor-label="parse" id="%5Blecs%2F%2Fparse%2F%23kotlin.collections.List%5Blecs.Token%5D%2FPointingToDeclaration%2F%5D%2FFunctions%2F-1692443571" data-filterable-set=":dokkaHtml/main"></a>Generates a parse tree represented by a <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html">List</a> of <a href="../-lecs-node/index.html">LecsNode</a> from a <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html">List</a> of <a href="../-token/index.html">Token</a> or returns a <a href="../-parse-error/index.html">ParseError</a> documenting the first parse error encountered when iterating the <a href="https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html">List</a> of <a href="../-token/index.html">Token</a>.</div></div>
 </div>
                     </div>
                   </div>
